tests/ok/meta-function-surface.ari
meta fn rewrite(input: ast) -> ast {
}

meta fn identity_tokens(input: token_stream) -> token_stream {
}

fn main() -> i64 {
  return 0;
}
