tests/errors/function-module-private.ari
mod Secret {
  fn hidden() -> i64 {
    return 1;
  }
}

fn main() -> i64 {
  return Secret::hidden();
}
